--- a/docs/queries.css
+++ b/docs/queries.css
@@ -3,6 +3,11 @@
     body{ font-size: 16px;}
     section{ padding: 30px 0; }
 
+    .long-copy{
+        width: 80%;
+        margin-left: 10%;
+    }
+
     .row,
     .hero-text-box{ padding: 0 4%}
     .col{
