--- a/docs/queries.css
+++ b/docs/queries.css
@@ -18,3 +18,7 @@
     .main-nav {display: none;}
     .mobile-nav-icon {display: inline-block;}
 }
+.steps-box {margin-top: 10px;}
+.steps-box:last-child {margin-top: 10px;}
+.works-steps {margin-bottom: 40px;}
+.works-step:last-of-type {margin-bottom: 60px;}
