--- a/docs/queries.css
+++ b/docs/queries.css
@@ -20,5 +20,5 @@
 }
 .steps-box {margin-top: 10px;}
 .steps-box:last-child {margin-top: 10px;}
-.works-steps {margin-bottom: 40px;}
+.works-step {margin-bottom: 40px;}
 .works-step:last-of-type {margin-bottom: 60px;}
