--- a/docs/queries.css
+++ b/docs/queries.css
@@ -3,6 +3,11 @@
     body{ font-size: 18px;}
     section{ padding: 30px 0; }
 
+    .steps-box {margin-top: 10px;}
+    .steps-box:last-child {margin-top: 10px;}
+    .works-step {margin-bottom: 40px;}
+    .works-step:last-of-type {margin-bottom: 60px;}
+
     .long-copy{
         width: 80%;
         margin-left: 10%;
@@ -17,8 +22,18 @@
 
     .main-nav {display: none;}
     .mobile-nav-icon {display: inline-block;}
+
+    .app-screen {width: 50%;}
+    .icon-small {
+        width: 17px;
+        margin-right: 5px;
+    }
+    .city-feature {font-size: 90%;}
+
+    .plan-box{
+        width: 100%;
+        margin-left: 0%;
+    }
+    .plan-price {font-size: 250%;}
+    .contact-form {width: 80%;}
 }
-.steps-box {margin-top: 10px;}
-.steps-box:last-child {margin-top: 10px;}
-.works-step {margin-bottom: 40px;}
-.works-step:last-of-type {margin-bottom: 60px;}
