--- a/docs/queries.css
+++ b/docs/queries.css
@@ -3,10 +3,10 @@
     body{ font-size: 18px;}
     section{ padding: 30px 0; }
 
-    .steps-box {margin-top: 10px;}
+    /* .steps-box {margin-top: 10px;}
     .steps-box:last-child {margin-top: 10px;}
     .works-step {margin-bottom: 40px;}
-    .works-step:last-of-type {margin-bottom: 60px;}
+    .works-step:last-of-type {margin-bottom: 60px;} */
 
     .long-copy{
         width: 80%;
