--- a/docs/queries.css
+++ b/docs/queries.css
@@ -3,15 +3,15 @@
     body{ font-size: 18px;}
     section{ padding: 30px 0; }
 
-    /* .steps-box {margin-top: 10px;}
+    .steps-box {margin-top: 10px;}
     .steps-box:last-child {margin-top: 10px;}
     .works-step {margin-bottom: 40px;}
-    .works-step:last-of-type {margin-bottom: 60px;} */
+    .works-step:last-of-type {margin-bottom: 60px;}
 
-    .long-copy{
+    /* .long-copy{
         width: 80%;
         margin-left: 10%;
-    }
+    } */
 
     .row,
     .hero-text-box{ padding: 0 4%}
