--- a/docs/queries.css
+++ b/docs/queries.css
@@ -20,8 +20,8 @@
         margin: 0 0 4% 0;
     }
 
-    /* .main-nav {display: none;}
-    .mobile-nav-icon {display: inline-block;} */
+    .main-nav {display: none;}
+    .mobile-nav-icon {display: inline-block;}
 
     .app-screen {width: 50%;}
     .icon-small {
