--- a/docs/style.css
+++ b/docs/style.css
@@ -441,7 +441,7 @@ footer p{
     margin-top: 20px;
 }
 /* Mobile navi */
-.mobile-navi-icon{
+.mobile-nav-icon{
     float: right;
     margin-top: 30px;
     cursor: pointer;
