--- a/docs/style.css
+++ b/docs/style.css
@@ -441,11 +441,11 @@ footer p{
     margin-top: 20px;
 }
 /* Mobile navi */
-.mobile-navi-icon{
+.mobile-nav-icon{
     float: right;
     margin-top: 30px;
     cursor: pointer;
-    display: none;
+    /* display: none; */
 }
 .mobile-nav-icon i{
     font-size: 200%;
