--- a/docs/style.css
+++ b/docs/style.css
@@ -442,7 +442,7 @@ footer p{
 }
 /* Mobile navi */
 .mobile-nav-icon{
-    float: left;
+    float: right;
     margin-top: 30px;
     cursor: pointer;
     display: none;
