--- a/docs/queries.css
+++ b/docs/queries.css
@@ -25,8 +25,8 @@
 
     .app-screen {width: 50%;}
     .icon-small {
-        /* width: 17px;
-        margin-right: 5px; */
+        width: 17px;
+        margin-right: 5px;
     }
     .city-feature {font-size: 90%;}
 
