--- a/docs/style.css
+++ b/docs/style.css
@@ -442,12 +442,12 @@ footer p{
 }
 /* Mobile navi */
 .mobile-nav-icon{
-    /* float: right;
+    float: right;
     margin-top: 30px;
     cursor: pointer;
-    display: none; */
+    display: none;
 }
 .mobile-nav-icon i{
-    font-size: 200%;
-    color: #fff;
+    /* font-size: 200%;
+    color: #fff; */
 }
