--- a/docs/style.css
+++ b/docs/style.css
@@ -445,9 +445,9 @@ footer p{
     float: right;
     margin-top: 30px;
     cursor: pointer;
-    display: none;
+    /* display: none; */
 }
 .mobile-nav-icon i{
-    /* font-size: 200%;
-    color: #fff; */
+    font-size: 200%;
+    color: #fff;
 }
