--- a/docs/queries.css
+++ b/docs/queries.css
@@ -23,6 +23,12 @@
     .main-nav {display: none;}
     .mobile-nav-icon {display: inline-block;}
 
+    .main-nav {
+        float: left;
+        margin-top: 30px;
+        margin-left: 25px;
+    }
+
     .app-screen {width: 50%;}
     .icon-small {
         width: 17px;
