--- a/docs/queries.css
+++ b/docs/queries.css
@@ -42,4 +42,8 @@
     }
     .plan-price {font-size: 250%;}
     .contact-form {width: 80%;}
+
+    .main-nav li{
+        display: block;
+    }
 }
