--- a/docs/style.css
+++ b/docs/style.css
@@ -328,8 +328,8 @@ cite img{
 }
 .plan-box div :first-child{
     background-color: #fcfcfc;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    /* border-top-left-radius: 5px;
+    border-top-right-radius: 5px; */
 }
 .step-box:last-child{
     text-align: center;
