--- a/docs/style.css
+++ b/docs/style.css
@@ -445,7 +445,7 @@ footer p{
     float: right;
     margin-top: 30px;
     cursor: pointer;
-    display: none;
+    /* display: none; */
 }
 .mobile-nav-icon i{
     font-size: 200%;
