--- a/docs/queries.css
+++ b/docs/queries.css
@@ -9,8 +9,8 @@
     .works-step:last-of-type {margin-bottom: 60px;}
 
     .long-copy{
-        width: 80%;
-        margin-left: 10%;
+        width: 100%;
+        margin-left: 0%;
     }
 
     .row,
@@ -54,4 +54,6 @@
         padding: 10px 0;
         font-size: 100%;
     }
+    h1 {font-size: 180%;}
+    h2 {font-size: 150%;}
 }
