--- a/docs/queries.css
+++ b/docs/queries.css
@@ -7,6 +7,8 @@
     .steps-box:last-child {margin-top: 10px;}
     .works-step {margin-bottom: 40px;}
     .works-step:last-of-type {margin-bottom: 60px;}
+    .steps-box:first-child{text-align: center;}
+
 
     .long-copy{
         width: 100%;
@@ -29,12 +31,20 @@
         margin-left: 25px;
     }
 
-    .app-screen {width: 50%;}
+    .app-screen {width: 40%;}
     .icon-small {
         width: 17px;
         margin-right: 5px;
     }
     .city-feature {font-size: 90%;}
+
+    .works-step div{
+        height: 40px;
+        width: 40px;
+        margin-right: 15px;
+        padding: 4px;
+        font-size: 120%;
+    }
 
     .plan-box{
         width: 100%;
